--- a/ACtingDriver/app/src/main/res/layout/activity_customer_login_register.xml
+++ b/ACtingDriver/app/src/main/res/layout/activity_customer_login_register.xml
@@ -4,41 +4,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CustomerLoginRegisterActivity">
+    tools:context=".CustomerLoginRegisterActivity"
+    android:background="@color/white">
 
     <TextView
-        android:id="@+id/customer_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CUSTOMER"
+        android:textSize="40sp"
+        android:textColor="@color/black"
+        android:id="@+id/title"
+        android:textStyle="bold"
+        android:layout_marginTop="8dp"
+        android:layout_centerHorizontal="true"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LOGIN"
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:id="@+id/titlesub"
+        android:layout_below="@id/title"
+        android:layout_centerHorizontal="true"/>
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="173dp"
-        android:text="Customer Login"
-        android:textAlignment="center"
-        android:textColor="@android:color/background_light"
-        android:textSize="20sp"
-        android:textStyle="bold" />
+        android:layout_centerVertical="true">
 
     <EditText
         android:id="@+id/customer_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/customer_status"
-        android:layout_marginTop="55dp"
         android:ems="10"
-        android:hint="Email..."
-        android:inputType="textEmailAddress" />
+        android:hint="Email"
+        android:layout_marginHorizontal="16dp"
+        android:inputType="textEmailAddress"
+        android:backgroundTint="#70000000"
+        android:textColor="@color/black"
+        android:textColorHint="#70000000"/>
 
     <EditText
         android:id="@+id/customer_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="11dp"
+        android:layout_marginHorizontal="16dp"
         android:ems="10"
-        android:hint="Password..."
+        android:hint="Password"
         android:inputType="textPassword"
         android:layout_below="@+id/customer_email"
+        android:backgroundTint="#70000000"
+        android:textColor="@color/black"
+        android:textColorHint="#70000000"
         android:layout_alignParentStart="true" />
 
     <EditText
@@ -47,9 +66,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="11dp"
         android:hint="Name"
+        android:layout_marginHorizontal="16dp"
         android:layout_below="@+id/customer_password"
         android:layout_alignParentStart="true"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        android:backgroundTint="#70000000"
+        android:textColor="@color/black"
+        android:textColorHint="#70000000"/>
 
     <EditText
         android:id="@+id/Driver_phonenumber"
@@ -57,19 +80,26 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="11dp"
         android:hint="Phone Number"
+        android:layout_marginHorizontal="16dp"
         android:layout_below="@+id/Driver_name"
         android:layout_alignParentStart="true"
-        android:visibility="gone"/>
+        android:visibility="gone"
+        android:backgroundTint="#70000000"
+        android:textColor="@color/black"
+        android:textColorHint="#70000000"/>
 
     <Button
         android:id="@+id/customer_login_btn"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
         android:layout_below="@+id/Driver_phonenumber"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="12dp"
         android:text="Login"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:layout_marginHorizontal="16dp"
+        android:textColor="@color/white"
+        />
 
     <TextView
         android:id="@+id/customer_register_link"
@@ -80,19 +110,22 @@
         android:layout_marginTop="10dp"
         android:text="Don't have an Account ?"
         android:textColor="@android:color/holo_red_dark"
-        android:textSize="15sp" />
+        android:textSize="15sp"
+        />
 
     <Button
         android:id="@+id/customer_register_btn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/customer_register_link"
         android:layout_marginTop="11dp"
         android:background="@android:color/holo_red_dark"
         android:text="Register"
         android:textColor="@android:color/background_light"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:layout_marginHorizontal="16dp"/>
+    </RelativeLayout>
 
 </RelativeLayout>
 
