--- a/ACtingDriver/app/src/main/res/layout/activity_main.xml
+++ b/ACtingDriver/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:backgroundTint="@color/white"
+    android:background="@color/white">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="AMBULANCE"
+        android:textSize="40sp"
+        android:textColor="@color/black"
+        android:id="@+id/title"
+        android:textStyle="bold"
+        android:layout_marginTop="8dp"
+        android:layout_centerHorizontal="true"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SERVICE"
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:id="@+id/titlesub"
+        android:layout_below="@id/title"
+        android:layout_centerHorizontal="true"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ambulance" />
+
 
     <Button
         android:id="@+id/customer_welcome_btn"
