--- a/ACtingDriver/app/src/main/res/layout/activity_driver_login_register.xml
+++ b/ACtingDriver/app/src/main/res/layout/activity_driver_login_register.xml
@@ -4,20 +4,28 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DriverLoginRegisterActivity">
+    tools:context=".DriverLoginRegisterActivity"
+    android:background="@color/white">
 
     <TextView
-        android:id="@+id/titlr_driver"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/driver_email"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="38dp"
-        android:text="Driver Login"
-        android:textAlignment="center"
-        android:textColor="@android:color/white"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:text="DRIVER"
+        android:textSize="40sp"
+        android:textColor="@color/black"
+        android:id="@+id/title"
+        android:textStyle="bold"
+        android:layout_marginTop="8dp"
+        android:layout_centerHorizontal="true"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="LOGIN"
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:id="@+id/titlesub"
+        android:layout_below="@id/title"
+        android:layout_centerHorizontal="true"/>
 
     <EditText
         android:id="@+id/driver_email"
@@ -27,9 +35,11 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:ems="10"
-        android:hint="Email..."
-        android:inputType="textEmailAddress" />
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:backgroundTint="#70000000"
+        android:textColor="@color/black"
+        android:textColorHint="#70000000"/>
 
     <EditText
         android:id="@+id/driver_password"
@@ -37,12 +47,15 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:ems="10"
-        android:hint="Password..."
+        android:hint="Password"
         android:inputType="textPassword"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_below="@+id/driver_email"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:backgroundTint="#70000000"
+        android:textColor="@color/black"
+        android:textColorHint="#70000000"/>
 
     <Button
         android:id="@+id/login_driver_btn"
@@ -52,7 +65,7 @@
         android:backgroundTint="@color/white"
         android:text="Login"
         android:textAllCaps="false"
-        android:textColor="?attr/actionMenuTextColor"
+        android:textColor="@color/white"
         android:textSize="24sp"
         android:layout_marginTop="13dp"
         android:layout_below="@+id/driver_password"
