--- a/ACtingDriver/app/src/main/res/layout/activity_driver_map.xml
+++ b/ACtingDriver/app/src/main/res/layout/activity_driver_map.xml
@@ -9,7 +9,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/settings_driver_btn">
+        android:layout_below="@+id/titlebar">
 
         <fragment
             android:id="@+id/map"
@@ -26,37 +26,28 @@
 
 
 
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:background="#e53935"
+    android:id="@+id/titlebar">
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="match_parent"
+        android:src="@drawable/ic_baseline_person_24"
+        android:id="@+id/profile"
+        android:layout_alignParentLeft="true"/>
+
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="match_parent"
+        android:src="@drawable/ic_baseline_login_24"
+        android:id="@+id/logout"
+        android:layout_alignParentRight="true"/>
 
 
-
-    <Button
-        android:id="@+id/settings_driver_btn"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:background="@color/black"
-        android:text="Settings"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@android:color/background_light"
-        android:textSize="15sp"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/logout_driv_btn"
-        android:layout_width="190dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/settings_driver_btn"
-        android:background="@color/black"
-        android:text="Logout"
-        android:textAlignment="center"
-        android:textAllCaps="false"
-        android:textColor="@android:color/background_light"
-        android:textSize="15sp"
-        android:textStyle="bold" />
+</RelativeLayout>
 
 
 
