--- a/ACtingDriver/app/src/main/res/layout/activity_settings.xml
+++ b/ACtingDriver/app/src/main/res/layout/activity_settings.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SettingsActivity">
+    tools:context=".SettingsActivity"
+    android:background="@color/white"
+    >
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_settings"
@@ -16,7 +18,7 @@
             android:id="@+id/toolbar_settings"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:background="@color/design_default_color_primary_dark">
+            android:background="#e53935">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -24,18 +26,16 @@
 
                 <ImageView
                     android:id="@+id/close_button"
-                    android:layout_width="30dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/close"
-                    android:tint="@android:color/white"
+                    android:layout_width="50dp"
+                    android:layout_height="500dp"
+                    android:src="@drawable/ic_baseline_close_24"
                     />
 
                 <ImageView
                     android:id="@+id/save_button"
                     android:layout_width="40dp"
                     android:layout_height="50dp"
-                    android:src="@drawable/save_edited_info"
-                    android:tint="@color/white"
+                    android:src="@drawable/ic_baseline_check_24"
                     android:layout_alignParentEnd="true"
                     android:layout_marginRight="15dp"
                     />
@@ -52,11 +52,14 @@
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="your Name"
+        android:hint="Name"
         android:layout_below="@+id/app_bar_settings"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="15dp"
+        android:backgroundTint="#70000000"
+        android:textColor="@color/black"
+        android:textColorHint="#70000000"
         />
 
 
@@ -64,12 +67,15 @@
         android:id="@+id/phone_number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="your Phone Number"
+        android:hint="Phone Number"
         android:inputType="number"
         android:layout_below="@+id/name"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="15dp"
+        android:backgroundTint="#70000000"
+        android:textColor="@color/black"
+        android:textColorHint="#70000000"
         />
 
 
