--- a/ACtingDriver/app/src/main/res/layout/activity_customers_map.xml
+++ b/ACtingDriver/app/src/main/res/layout/activity_customers_map.xml
@@ -105,11 +105,10 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:src="@drawable/phone"
-            android:tint="@android:color/black"
             android:layout_alignParentEnd="true"
             android:layout_marginRight="15dp"
             android:layout_centerVertical="true"
-            />
+            app:tint="@android:color/black" />
 
     </RelativeLayout>
 
@@ -120,8 +119,8 @@
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:background="@color/design_default_color_primary"
-        android:text="Call a CAB"
+        android:background="#ab000d"
+        android:text="FIND A AMBULANCE"
         android:textAllCaps="false"
         android:textColor="@android:color/background_light"
         android:textSize="23sp"
