--- a/ACtingDriver/app/src/main/res/layout/activity_settings.xml
+++ b/ACtingDriver/app/src/main/res/layout/activity_settings.xml
@@ -47,13 +47,34 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CUSTOMER"
+        android:textSize="40sp"
+        android:textColor="@color/black"
+        android:id="@+id/title"
+        android:textStyle="bold"
+        android:layout_marginTop="8dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/app_bar_settings"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PROFILE"
+        android:textSize="16sp"
+        android:textColor="@color/black"
+        android:id="@+id/titlesub"
+        android:layout_below="@id/title"
+        android:layout_centerHorizontal="true"/>
+
 
     <EditText
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Name"
-        android:layout_below="@+id/app_bar_settings"
+        android:layout_below="@+id/titlesub"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="15dp"
